# hand_detection

./: .gitignore  CMakeLists.txt  README.md
src/: HandMasker.cpp  HandMasker.hpp  main.cpp
